--- a/StormData/StormDataReport.Rmd
+++ b/StormData/StormDataReport.Rmd
@@ -5,12 +5,11 @@ Storms and other severe weather events can cause both public health and economic
 
 ## Data Processing
 The data was retrieved from the U.S. National Oceanic and Atmospheric Administration's (NOAA) storm database. 
-```{r download, eval = FALSE}
+```{r download, cache = TRUE, eval = FALSE}
 setwd("./StormData")
 url <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2"
-if(!file.exists()){
-  download.file(url,"StormData.bz2")
-  unzip("StormData.bz2")
+if(!file.exists("StormData.bz2")){
+  download.file(url,destfile = "StormData.bz2")
 }
 ```
 
@@ -20,11 +19,90 @@ The Storm Data file is in a comma-separated-value file compressed via the bzip2 
 - National Climatic Data Center Storm Events [FAQ](https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2FNCDC%20Storm%20Events-FAQ%20Page.pdf)
 
 ### Exploring the data
+```{r, cache = TRUE}
+stormData<- read.table("StormData.bz2", header = TRUE, sep = ",", stringsAsFactors = FALSE, na.strings="NA")
+```
+The column names of the data are as follows:
 ```{r}
-stormData<- read.csv("StormData.bz2")
-head(stormData)
+names(stormData)
 ```
 The dimension of the data is given by:
-  ```{r}
+```{r}
 dim(stormData)
 ```
+### Subsetting the data
+```{r packages, message=FALSE, warning=FALSE, results='hide'}
+# Load packages
+library(dplyr)
+library(tidyr)
+library(lubridate)
+library(ggplot2)
+```
+The events in the database have an different combination of random items. Some of them are as follows:
+```{r}
+head(unique(stormData$EVTYPE))
+```
+Now, these weather events are defined into eight unique categories namely, tornado, thunderstorm, flood, hurricane, freezing, rainfall, heat and fire. Then a dataframe is created containing the total casualties per eight events.
+```{r subset}
+df<-stormData
+newData<-df %>%
+  mutate(Events = as.character(EVTYPE)) %>%
+  ### Selecting certain words from events column and giving a common name in a new column
+  mutate(Event = ifelse(grepl("TORNADO", Events),"Tornado",
+                     ifelse(grepl("Thunderstorm|Wind|THUNDERSTORM|WIND|TSTM|HAIL|hail|Hail|STORM", 
+                                  Events),"Thunderstorm",
+                            ifelse(grepl("Flood|FLOOD|Drowning|DROWNING|DAM",Events),"Flood",
+                                   ifelse(grepl("Hurricane|HURRICANE", Events), "Hurricane",
+                                          ifelse(grepl("Freeze|FREEZE|Cold|COLD|Snow|SNOW|snow|Frost|
+                                                       FROST|ICE|Ice|Icy",Events),"Freezing",
+                                                 ifelse(grepl("RAIN|Rain|Precipitation|PRECIPITATION|
+                                                              Mudslide|MUDSLIDE| Wet|wet|WET", 
+                                                              Events),"Rainfall",
+                                                        ifelse(grepl("HEAT|Heat|DROUGHT|Drought|DRY",
+                                                                     Events),"Heat",
+                                                               ifelse(grepl("FIRE|Fire|WILD",Events),
+                                                                      "Fire","Other"
+                     ))))))))) %>%
+  select(Event,FATALITIES,INJURIES,PROPDMG,CROPDMG)  %>%
+  ### Group by events
+  group_by(Event)  %>%  
+  ### Take sum of all fatalities, injuries and property damage for each event
+  summarise(Fatalities = sum(FATALITIES,na.rm = T),Injuries = sum(INJURIES,na.rm = T),
+            Property_Damage = sum(PROPDMG,na.rm = T),Crop_Damage = sum(CROPDMG,na.rm = T))
+```
+
+### Impact of severe weather events on population health
+A subset consisting casualties information for each event was created. Then a barplot was plotted to demonstrate graphically the number of fatalities and injuries for each event.
+```{r}
+### Create a subset containing only data related to population health
+popHealth <- gather(newData[-6,1:3],Type,Casualties,-Event)
+```
+
+```{r plot,fig.height=4}
+### Plot a bargraph of casualties due to events in the US
+g<- ggplot(popHealth,aes(x = Event,y = Casualties, fill = Type))
+g + geom_bar(stat="identity", color="black") +
+  scale_fill_brewer(palette="Blues")+ 
+  labs(title = "Casualties of different events across United States") +
+  theme_bw()
+```
+
+Here, it is clear that tornadoes cause the most casualties across the United States.
+
+### Impact of severe weather events on the economy
+A subset consisting property and crop damages information for each event was created. Then a barplot was plotted to demonstrate graphically the US dollars of property and crop damages for each event.
+```{r}
+# Plot a bargraph of property damage in the US
+ecoDamage <- gather(newData[-6,c(1,4,5)],Type,Damages,-Event)
+```
+
+```{r,fig.height=4}
+g <- ggplot(ecoDamage,aes(x = Event,y = Damages, fill = Type))
+g + geom_bar(stat="identity", color="black") +
+  scale_fill_manual(values =  c("lightblue","steelblue"),labels=c("Crop Damage", "Property Damage"))+ 
+  labs(y = "US Dollars") +
+  labs(title = "Economic consequences due to different events\nin the United States") +
+  theme(axis.title.x=element_text(hjust = 0.5,vjust = 0.5,angle = 45))+
+  theme_bw()
+```
+
